samples/_failures_safe/1761209788_9e434e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a678f00f.c: In function ‘main’:
./samples/SAFE/__tmp_a678f00f.c:152:5: error: expected declaration or statement at end of input
  152 |     if (analyzer.word_count == 0) {
      |     ^~
./samples/SAFE/__tmp_a678f00f.c:152:5: error: expected declaration or statement at end of input
